EN-166 Fixed spacings (#77)
* Fixed spacings

* Fixed spacings

* Fixed spacings

--- a/src/views/Companies/Company.module.scss
+++ b/src/views/Companies/Company.module.scss
@@ -7,7 +7,7 @@
 .scrollspy {
   display: flex;
   justify-content: space-between;
-  height: 35px;
+  height: 45px;
   align-items: flex-end;
   margin: 0 1.3em;
 
@@ -15,7 +15,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    height: 1.5em;
+    height: 2em;
     padding-bottom: 1.5em;
     font-size: 14px;
     line-height: 16px;
